Add /help and utools ascii mode

--- a/double_pinyin_flypy.custom.yaml
+++ b/double_pinyin_flypy.custom.yaml
@@ -51,12 +51,13 @@ patch:
     # 自定义快捷符号输入
     symbols:
       "/fs": [½, ‰, ¼, ⅓, ⅔, ¾, ⅒]
-      "/bq": [ 🤣, 🤔️, 🎉, 😂️, 🐂🍺️, 😱️, 👌, 😅️, 😇️, 🙃️, 💊️, 💯️, 👍️, 🙈️, 💩️, 😈️]
+      "/bq": [🤣, 🤔️, 🎉, 😂️, 🐂🍺️, 😱️, 👌, 😅️, 😇️, 🙃️, 💊️, 💯️, 👍️, 🙈️, 💩️, 😈️]
       "/dn": [⌘, ⌥, ⇧, ⌃, ⎋, ⇪, , ⌫, ⌦, ↩︎, ⏎, ↑, ↓, ←, →, ↖, ↘, ⇟, ⇞]
-      "/fh": [ ©, ®, ℗, ℠, ™, ℡, ⓘ, ♂, ♀, ☉, ☊, ☋, ☌, ☍, ☐, ☑︎, ☒, ☜, ☝, ☞, ☟, ✎, ✄, ♲, ♻, ⚐, ⚑, ⚠]
+      "/fh": [⚐, ⚑, ⚠, ©, ®, ℗, ℠, ™, ℡, ⓘ, ♂, ♀, ☉, ☊, ☋, ☌, ☍, ☐, ☑︎, ☒, ☜, ☝, ☞, ☟, ✎, ✄, ♲, ♻]
       "/x": [＊, ×, ✱, ★, ☆, ✩, ✧, ❋, ❊, ❉, ❈, ❅, ✿, ✲]
       "/sm": ["《", "》", "〈", "〉", "«", "»", "<", ">"]
       "/tab": "	"
+      "/help": [ 符號：/fh, 單位：/dw, 標點：/bd, 數學：/sx, 拼音：/py, 星號：/xh, 方塊：/fk, 幾何：/jh, 箭頭：/jt, 電腦：/dn, 羅馬數字：/lm, 大写羅馬數字：/lmd, 拉丁：/ld, 上標：/sb, 下標：/xb, 希臘字母：/xl, 大写希臘字母：/xld, 數字：/0到/9, 分數：/fs, いろは順：/iro, 假名：/jm或/pjm或/jmk到/jmo, 假名+圈：/jmq, 假名+半角：/jmbj, 俄語：/ey, 大写俄語：/eyd, 韓文：/hw, 韓文+圈：/hwq, 韓文+弧：/hwh, 結構：/jg, 偏旁：/pp, 康熙（部首）：/kx, 筆畫：/bh, 註音：/zy, 聲調：/sd, 漢字+圈：/hzq, 漢字+弧：/hzh, 數字+圈：/szq, 數字+弧：/szh, 數字+點：/szd, 字母+圈：/zmq, 字母+弧：/zmh, 表情：/bq, 音樂：/yy, 月份：/yf, 日期：/rq, 曜日：/yr, 時間：/sj, 天干：/tg, 地支：/dz, 干支：/gz, 節氣：/jq, 象棋：/xq, 麻將：/mj, 色子：/sz, 撲克：/pk, 八卦：/bg, 八卦名：/bgm, 六十四卦：/lssg, 六十四卦名：/lssgm, 太玄經：/txj, 天體：/tt, 星座：/xz, 星座名：/xzm, 十二宮：/seg, 蘇州碼：/szm ]
     half_shape:
       "#": "#"
       "*": "*"
@@ -66,24 +67,23 @@ patch:
       "=": "="
       "/": ["/", "÷"]
       '\': "、"
-      "_" : "──"
-      # "'": { pair: ["「", "」"] }
+      # "_": "──"
+      '"': { pair: ["「", "」"] }
+      "'": { pair: ["『", "』"] }
       "$": ["¥", "$", "€", "£", "¢", "¤"]
       "<": "<"
       ">": ">"
       # 个人的标点符号喜好
-      ",": ", "
-      ".": ". "
-      "{": "「"
-      "}": "」"
-      '"': '"'
-      "'": "'"
-      "?": "? "
+      "{": "{"
+      "}": "}"
+      # '"': '"'
+      # "'": "'"
+      "?": "?"
       "!": "!"
       "(": "("
       ")": ")"
       ":": ":"
-      "-": "-"
+      # "-": "-"
       "[": "["
       "]": "]"
 
@@ -92,6 +92,8 @@ patch:
   recognizer:
     import_preset: default
     patterns:
+      email: "^[A-Za-z][-_.0-9A-Za-z]*@.*$"
+      uppercase: "[A-Z][-_+.'0-9A-Za-z]*$"
       punct: "^/([a-z]+|[0-9]0?)$"
       html: "^<[a-z]+>$"
       camel: "[a-z]+[A-Z].*$"
@@ -103,7 +105,7 @@ patch:
     user_dict: custom_phrase
     db_class: stabledb
     enable_completion: false
-    enable_sentence: false
+    enable_sentence: true
     initial_quality: 1
   "engine/translators/@5": table_translator@custom_phrase
 
