--- a/luna_pinyin.extended.dict.yaml
+++ b/luna_pinyin.extended.dict.yaml
@@ -22,11 +22,8 @@ use_preset_vocabulary: true
 #雙拼不支持 luna_pinyin.cn_en 詞庫，請用戶手動禁用。
 import_tables:
   - luna_pinyin
-  #- luna_pinyin.flypyfz #小鹤辅助码
-  - luna_pinyin.sgmain
-  - luna_pinyin.sgplus
-  - luna_pinyin.sgplus2
   - luna_pinyin.chat
+  - luna_pinyin.game
   - luna_pinyin.computer
   - luna_pinyin.place
   - luna_pinyin.shopping
