--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -15,27 +15,28 @@ patch:
     good_old_caps_lock: false # 若为true，caps只切换大小写
     switch_key:
       Shift_L: noop
+      Shift_R: noop
       Control_L: noop
+      Control_R: noop
       Caps_Lock: commit_code
       Eisu_toggle: clear
   key_binder/bindings: # 设置哪些键可以翻页，需要哪个取消注释即可
-    - { accept: "Control+d", send: Delete, when: composing }
     - { accept: "Control+k", send: "Shift+Delete", when: composing }
-    - { accept: "Shift+Tab", send: Page_Up, when: composing }
-    - { accept: Tab, send: Page_Down, when: composing }
-    - { when: composing, accept: Shift+Tab, send: Page_Up }
-    - { when: has_menu, accept: bracketright, send: Page_Down }
-    - { when: has_menu, accept: equal, send: Page_Down }
-    - { when: paging, accept: bracketleft, send: Page_Up }
-    - { when: paging, accept: minus, send: Page_Up }
+    - { accept: "Shift+Tab", send: Page_Up, when: composing } # Shift + Tab 向上翻页
+    - { accept: Tab, send: Page_Down, when: composing } # Tab 向下翻页
+    - { accept: Shift+Tab, send: Page_Up, when: composing }
+    - { accept: bracketright, send: Page_Down, when: composing }
+    - { accept: equal, send: Page_Down, when: composing }
+    - { accept: bracketleft, send: Page_Up, when: composing }
+    - { accept: minus, send: Page_Up, when: composing }
+    - { accept: "Control+Shift+4", toggle: simplification, when: always } # Shift + Control + 4 切换简繁
+    # - { accept: "Control+d", send: Delete, when: composing }
     # - { accept: "Shift+space", toggle: full_shape, when: always } # Shift + 空格 切换全角/半角
-    # - { when: composing, accept: Tab, send: Page_Up } # Tab 翻页
     # - { when: has_menu, accept: apostrophe, send: 3 }
     # - { when: has_menu, accept: semicolon, send: 2 }
     # - {accept: "Control+Shift+1", select: .next, when: always}
     # - {accept: "Control+Shift+2", toggle: ascii_mode, when: always}
     # - {accept: "Control+Shift+3", toggle: full_shape, when: always}
-    - {accept: "Control+Shift+4", toggle: simplification, when: always}
     # - {accept: "Control+Shift+5", toggle: extended_charset, when: always}
     # - {accept: "Control+Shift+at", toggle: ascii_mode, when: always}
     # - {accept: "Control+Shift+dollar", toggle: simplification, when: always}
