--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -148,7 +148,7 @@ patch:
     #- charset_filter@gbk
     #- single_char_filter
   engine/processors:
-    - ascii_composer
+    # - ascii_composer
     - recognizer
     - key_binder
     - speller
