--- a/luna_pinyin.custom.yaml
+++ b/luna_pinyin.custom.yaml
@@ -125,7 +125,7 @@ patch:
       reset: 0
       states: [中文, 西文]
     - name: emoji_suggestion
-      # reset: 1
+      reset: 1
       states: ["Yes", "No"]
     - name: full_shape
       states: [半角, 全角]
@@ -135,7 +135,7 @@ patch:
     - name: ascii_punct
       states: [。，, ．，]
   engine/translators:
-    - lua_translator@date_translator
+    # - lua_translator@date_translator
     # - lua_translator@week_translator
     - punct_translator
     - script_translator
@@ -202,8 +202,8 @@ patch:
     initial_quality: 1
   "engine/translators/@5": table_translator@custom_phrase
 
-  Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
-  __include: easy_en:/patch
-  easy_en/enable_sentence: false
+  # Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
+  # __include: easy_en:/patch
+  # easy_en/enable_sentence: false
   # Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
-  # __include: grammar:/hant
+  __include: grammar:/hant
