--- a/double_pinyin_flypy.custom.yaml
+++ b/double_pinyin_flypy.custom.yaml
@@ -26,7 +26,7 @@ patch:
     - charset_filter@gbk
     - single_char_filter
   engine/processors:
-    # - ascii_composer
+    - ascii_composer
     - recognizer
     - key_binder
     - speller
