feat: add select_character_processor and update dictionary
Thanks
https://github.com/wongdean/rime-settings
https://github.com/BlindingDark/rime-lua-select-character
https://github.com/alswl/Rime
https://github.com/thtfhsw/rime-essay-creator

--- a/double_pinyin_flypy.custom.yaml
+++ b/double_pinyin_flypy.custom.yaml
@@ -24,8 +24,8 @@ patch:
     - simplifier@emoji_suggestion
     - simplifier
     - uniquifier
-    - charset_filter@gbk
-    - single_char_filter
+    # - charset_filter@gbk
+    # - single_char_filter
   engine/processors:
     - ascii_composer
     - recognizer
@@ -109,8 +109,10 @@ patch:
     initial_quality: 1
   "engine/translators/@5": table_translator@custom_phrase
 
-  Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
+  # Rx: BlindingDark/rime-easy-en:customize:schema=double_pinyin_flypy
   __include: easy_en:/patch
   easy_en/enable_sentence: false
   # Rx: lotem/rime-octagram-data:customize:schema=luna_pinyin,model=hans
-  # __include: grammar:/hant
+  __include: grammar:/hant
+  # Rx: BlindingDark/rime-lua-select-character:customize:schema=luna_pinyin
+  __include: lua_select_character:/patch
