--- a/symbols.yaml
+++ b/symbols.yaml
@@ -61,7 +61,7 @@ punctuator:
     '*' : [ '*', ＊, ·, ・, ×, ※, ❂, ⁂, ☮, ☯, ☣ ]
     '(' : （
     ')' : ）
-    '-' : '-'
+    '-' : { commit: '-' }
     '_' : { commit: '——' }
     '+' : { commit: '+' }
     '=' : { commit: '=' }
