--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -1,6 +1,7 @@
 patch:
   style:
     display_tray_icon: false
+    inline_preedit: true
     horizontal: true
     font_point: 13
     layout:
@@ -45,6 +46,7 @@ patch:
       border_height: 0
       border_width: 0
       font_point: 16
+      font_face: "Microsoft YaHei"
       label_font_point: 12
       back_color: 0xFFFFFF
       candidate_text_color: 0x121212
