--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -48,3 +48,68 @@ patch:
       hilited_candidate_text_color: 0xEE6E00 #候选文字颜色
       hilited_candidate_back_color: 0xFFF0E4 #候选文字背景色
       comment_text_color: 0x999999 #拼音等提示文字颜色
+
+    win10:
+      candidate_text_color: 0x000000 # 预选项文字颜色
+      comment_text_color: 0x888888 # 拼音等提示文字颜色
+      text_color: 0x000000 # 拼音行文字颜色
+      back_color: 0xffffff # 候选条背景色，24位色值，16进制，BGR顺序
+      hilited_text_color: 0x000000 # 高亮拼音 (需要开启内嵌编码)
+      hilited_back_color: 0xffffff # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xffffff # 第一候选项文字颜色
+      hilited_candidate_back_color: 0xcc8f29 # 候选文字背景色
+      hilited_comment_text_color: 0xffffff # 注解文字高亮
+      hilited_label_color: 0xffffff # 已选字的数字的颜色
+      label_color: 0x888888 # 预选栏编号颜色
+      label_format: "%s"
+      font_point: 16 # 候选文字大小
+      label_font_point: 12 # 候选编号大小
+      corner_radius: 0 # 候选条圆角
+      inline_preedit: true # 单行显示，false双行显示
+      min_width: 160
+      min_height: 0
+      border_width: 6 # 窗口左右宽度
+      border_height: 6 # 窗口左右高度
+      margin_x: 12 # 字起始距左边距离
+      margin_y: 12 # 字上下边距
+      spacing: 10 # 间距
+      candidate_spacing: 24 # 候选字间隔
+      hilite_spacing: 8 # 序号和候选字之间的间隔
+      hilite_padding: 12 # 候选字背景色色块高度 若想候选字背景色块无边界填充候选框，仅需其高度和候选字上下边距一致即可
+      round_corner: 0 # 候选字背景色块圆角幅度
+      horizontal: true # 横排显示
+      candidate_format: "%c\u2005%@ " # 候选格式
+
+    win10_ayaya:
+      label_format: "%s"
+      font_point: 16 # 候选文字大小
+      label_font_point: 12 # 候选编号大小
+      corner_radius: 0 # 候选条圆角
+      inline_preedit: true # 单行显示，false双行显示
+      min_width: 160
+      min_height: 0
+      border_width: 6 # 窗口左右宽度
+      border_height: 6 # 窗口左右高度
+      margin_x: 12 # 字起始距左边距离
+      margin_y: 12 # 字上下边距
+      spacing: 10 # 间距
+      candidate_spacing: 24 # 候选字间隔
+      hilite_spacing: 8 # 序号和候选字之间的间隔
+      hilite_padding: 12 # 候选字背景色色块高度 若想候选字背景色块无边界填充候选框，仅需其高度和候选字上下边距一致即可
+      round_corner: 0 # 候选字背景色块圆角幅度
+      horizontal: true # 横排显示
+      candidate_format: "%c\u2005%@ " # 候选格式
+
+      # 颜色
+      back_color: 0xFFFFFF # 候选条背景色，24位色值，16进制，BGR顺序
+      candidate_text_color: 0x121212 # 预选项文字颜色
+      comment_text_color: 0x8E8E8E # 拼音等提示文字颜色
+      hilited_candidate_back_color: 0xECE4FC # 候选文字背景色
+      hilited_candidate_label_color: 0xB18FF4 # 候选编号颜色
+      hilited_candidate_text_color: 0x7A40EC # 候选文字颜色
+      label_color: 0x888785 # 预选栏编号颜色
+      text_color: 0x8100EB # 高亮选中词颜色
+      hilited_text_color: 0x000000 # 高亮拼音 (需要开启内嵌编码)
+      hilited_back_color: 0xffffff # 第一候选项背景背景色
+      hilited_comment_text_color: 0xffffff # 注解文字高亮
+      hilited_label_color: 0xffffff # 已选字的数字的颜色
