--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -109,3 +109,53 @@ patch:
       hilited_candidate_text_color: 0x7A40EC # 候选文字颜色
       label_color: 0x888785 # 预选栏编号颜色
       text_color: 0x8100EB # 高亮选中词颜色
+
+    macos_light:
+      author: "一方<liuour@gmail.com>"
+      back_color: 0xFFFFFF                      # 候选条背景色，24位色值，16进制，BGR顺序
+      border_color: 0xFFFFFF                    # 边框色
+      text_color: 0x424242                      # 拼音行文字颜色
+      hilited_back_color: 0xD75A00              # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xFFFFFF    # 第一候选项文字颜色
+      hilited_candidate_label_color: 0xFFFFFF   # 第一候选项编号颜色
+      hilited_comment_text_color: 0x999999      # 注解文字高亮
+      hilited_text_color: 0x999999              # 高亮拼音 (需要开启内嵌编码)
+      candidate_text_color: 0x3c3c3c            # 预选项文字颜色
+      comment_text_color: 0x999999              # 拼音等提示文字颜色
+      horizontal: true                          # 水平排列
+      inline_preedit: true                      # 单行显示，false双行显示
+      label_color: 0x999999                     # 预选栏编号颜色
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
+      font_face: "PingFangSC"                   # 候选词编号字体
+      font_point: 16              # 候选文字大小
+      label_font_point: 13        # 候选编号大小
+      corner_radius: 5            # 候选条圆角
+      hilited_corner_radius: 5    # 高亮圆角
+      border_height: 4            # 窗口上下高度
+      border_width: 4             # 窗口左右宽度
+      border_color_width: 0       # 输入条边框宽度
+
+    macos_dark:
+      author: "一方<liuour@gmail.com>"
+      back_color: 0x252a2e                      # 候选条背景色，24位色值，16进制，BGR顺序
+      border_color: 0x050505                    # 边框色
+      text_color: 0x424242                      # 拼音行文字颜色
+      hilited_back_color: 0xD75A00              # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xFFFFFF    # 第一候选项文字颜色
+      hilited_candidate_label_color: 0xFFFFFF   # 第一候选项编号颜色
+      hilited_comment_text_color: 0x999999      # 注解文字高亮
+      hilited_text_color: 0x999999              # 高亮拼音 (需要开启内嵌编码)
+      candidate_text_color: 0xe9e9ea            # 预选项文字颜色
+      comment_text_color: 0x999999              # 拼音等提示文字颜色
+      horizontal: true                          # 水平排列
+      inline_preedit: true                      # 单行显示，false双行显示
+      label_color: 0x999999                     # 预选栏编号颜色
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
+      font_face: "PingFangSC"                   # 候选词编号字体
+      font_point: 16              # 候选文字大小
+      label_font_point: 13        # 候选编号大小
+      corner_radius: 5            # 候选条圆角
+      hilited_corner_radius: 5    # 高亮圆角
+      border_height: 4            # 窗口上下高度
+      border_width: 4             # 窗口左右宽度
+      border_color_width: 0       # 输入条边框宽度
