--- a/weasel.custom.yaml
+++ b/weasel.custom.yaml
@@ -3,9 +3,7 @@ patch:
     display_tray_icon: false
     inline_preedit: true
     horizontal: true
-    font_point: 13
     layout:
-      border_width: 0
       border: 0
       margin_x: 12
       margin_y: 12
@@ -17,42 +15,159 @@ patch:
     color_scheme: ayaya
 
   preset_color_schemes:
-    apathy:
-      name: "冷漠／Apathy"
-      author: "LIANG Hai"
-      back_color: 0xFFFFFF
-      border_height: 0
-      border_width: 8
-      candidate_format: "%c\u2005%@"
-      comment_text_color: 0x999999
-      corner_radius: 5
-      font_point: 16
-      font_face: "Microsoft YaHei"
-      hilited_candidate_back_color: 0xFFF0E4
-      hilited_candidate_text_color: 0xEE6E00
-      horizontal: true
-      inline_preedit: true
-      label_font_point: 12
-      border_color: 0xffffff
-      text_color: 0x424242
     ayaya:
       name: "文文／Ayaya"
       author: "Lufs <i@isteed.cc>"
-      border_color: 0xffffff
-      horizontal: true
-      inline_preedit: true
-      candidate_format: "%c\u2005%@"
-      corner_radius: 5
+
+      horizontal: true # 水平排列
+      inline_preedit: true # 单行显示，false 双行显示
+      candidate_format: "%c\u2005%@" # 编号 %c 和候选词 %@ 前后的空间
+      corner_radius: 5 # 候选条圆角
       border_height: 0
       border_width: 0
-      font_point: 16
-      font_face: "Microsoft YaHei"
-      label_font_point: 12
-      back_color: 0xFFFFFF
-      candidate_text_color: 0x121212
-      comment_text_color: 0x8E8E8E
-      hilited_candidate_back_color: 0xECE4FC
-      hilited_candidate_label_color: 0xB18FF4
-      hilited_candidate_text_color: 0x7A40EC
-      label_color: 0x888785
-      text_color: 0x8100EB
+      font_face: "PingFangSC" # 候选词字体
+      font_point: 16 # 候选字词大小
+      label_font_face: "PingFangSC" # 候选词编号字体
+      label_font_point: 12 # 候选编号大小
+
+      # 颜色
+      back_color: 0xFFFFFF # 候选条背景色，24位色值，16进制，ABGR顺序
+      border_color: 0xECE4FC # 边框颜色
+      candidate_text_color: 0x121212 # 预选项文字颜色
+      comment_text_color: 0x8E8E8E # 拼音等提示文字颜色
+      hilited_candidate_back_color: 0xECE4FC # 候选文字背景色
+      hilited_candidate_label_color: 0xB18FF4 # 候选编号颜色
+      hilited_candidate_text_color: 0x7A40EC # 候选文字颜色
+      label_color: 0x888785 # 预选栏编号颜色
+      text_color: 0x8100EB # 高亮选中词颜色
+
+    apathy:
+      name: 冷漠／Apathy
+      author: LIANG Hai
+      horizontal: true # 水平排列
+      inline_preedit: true #单行显示，false 双行显示
+      candidate_format: "%c\u2005%@" # 编号 %c 和候选词 %@ 前后的空间
+      corner_radius: 5 #候选条圆角
+      border_height: 0
+      border_width: 0
+      back_color: 0xFFFFFF #候选条背景色
+      font_face: "PingFangSC-Regular,HanaMinB" #候选词字体
+      font_point: 16 #候选字词大小
+      text_color: 0x424242 #高亮选中词颜色
+      label_font_face: "STHeitiSC-Light" #候选词编号字体
+      label_font_point: 12 #候选编号大小
+      hilited_candidate_text_color: 0xEE6E00 #候选文字颜色
+      hilited_candidate_back_color: 0xFFF0E4 #候选文字背景色
+      comment_text_color: 0x999999 #拼音等提示文字颜色
+
+    win10:
+      candidate_text_color: 0x000000 # 预选项文字颜色
+      comment_text_color: 0x888888 # 拼音等提示文字颜色
+      text_color: 0x000000 # 拼音行文字颜色
+      back_color: 0xffffff # 候选条背景色，24位色值，16进制，BGR顺序
+      hilited_text_color: 0x000000 # 高亮拼音 (需要开启内嵌编码)
+      hilited_back_color: 0xffffff # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xffffff # 第一候选项文字颜色
+      hilited_candidate_back_color: 0xcc8f29 # 候选文字背景色
+      hilited_comment_text_color: 0xffffff # 注解文字高亮
+      hilited_label_color: 0xffffff # 已选字的数字的颜色
+      label_color: 0x888888 # 预选栏编号颜色
+      label_format: "%s"
+      font_point: 16 # 候选文字大小
+      label_font_point: 12 # 候选编号大小
+      corner_radius: 0 # 候选条圆角
+      inline_preedit: true # 单行显示，false双行显示
+      min_width: 160
+      min_height: 0
+      border_width: 6 # 窗口左右宽度
+      border_height: 6 # 窗口左右高度
+      margin_x: 12 # 字起始距左边距离
+      margin_y: 12 # 字上下边距
+      spacing: 10 # 间距
+      candidate_spacing: 24 # 候选字间隔
+      hilite_spacing: 8 # 序号和候选字之间的间隔
+      hilite_padding: 12 # 候选字背景色色块高度 若想候选字背景色块无边界填充候选框，仅需其高度和候选字上下边距一致即可
+      round_corner: 0 # 候选字背景色块圆角幅度
+      horizontal: true # 横排显示
+      candidate_format: "%c\u2005%@ " # 候选格式
+
+    win10_ayaya:
+      label_format: "%s"
+      font_point: 16 # 候选文字大小
+      label_font_point: 12 # 候选编号大小
+      corner_radius: 0 # 候选条圆角
+      inline_preedit: true # 单行显示，false双行显示
+      min_width: 160
+      min_height: 0
+      border_width: 6 # 窗口左右宽度
+      border_height: 6 # 窗口左右高度
+      margin_x: 12 # 字起始距左边距离
+      margin_y: 12 # 字上下边距
+      spacing: 10 # 间距
+      candidate_spacing: 24 # 候选字间隔
+      hilite_spacing: 8 # 序号和候选字之间的间隔
+      hilite_padding: 12 # 候选字背景色色块高度 若想候选字背景色块无边界填充候选框，仅需其高度和候选字上下边距一致即可
+      round_corner: 0 # 候选字背景色块圆角幅度
+      horizontal: true # 横排显示
+      candidate_format: "%c\u2005%@ " # 候选格式
+
+      # 颜色
+      back_color: 0xFFFFFF # 候选条背景色，24位色值，16进制，BGR顺序
+      border_color: 0xECE4FC # 边框颜色
+      candidate_text_color: 0x121212 # 预选项文字颜色
+      comment_text_color: 0x8E8E8E # 拼音等提示文字颜色
+      hilited_candidate_back_color: 0xECE4FC # 候选文字背景色
+      hilited_candidate_label_color: 0xB18FF4 # 候选编号颜色
+      hilited_candidate_text_color: 0x7A40EC # 候选文字颜色
+      label_color: 0x888785 # 预选栏编号颜色
+      text_color: 0x8100EB # 高亮选中词颜色
+
+    macos_light:
+      author: "一方<liuour@gmail.com>"
+      back_color: 0xFFFFFF                      # 候选条背景色，24位色值，16进制，BGR顺序
+      border_color: 0xFFFFFF                    # 边框色
+      text_color: 0x424242                      # 拼音行文字颜色
+      hilited_back_color: 0xD75A00              # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xFFFFFF    # 第一候选项文字颜色
+      hilited_candidate_label_color: 0xFFFFFF   # 第一候选项编号颜色
+      hilited_comment_text_color: 0x999999      # 注解文字高亮
+      hilited_text_color: 0x999999              # 高亮拼音 (需要开启内嵌编码)
+      candidate_text_color: 0x3c3c3c            # 预选项文字颜色
+      comment_text_color: 0x999999              # 拼音等提示文字颜色
+      horizontal: true                          # 水平排列
+      inline_preedit: true                      # 单行显示，false双行显示
+      label_color: 0x999999                     # 预选栏编号颜色
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
+      font_face: "PingFangSC"                   # 候选词编号字体
+      font_point: 16              # 候选文字大小
+      label_font_point: 13        # 候选编号大小
+      corner_radius: 5            # 候选条圆角
+      hilited_corner_radius: 5    # 高亮圆角
+      border_height: 4            # 窗口上下高度
+      border_width: 4             # 窗口左右宽度
+      border_color_width: 0       # 输入条边框宽度
+
+    macos_dark:
+      author: "一方<liuour@gmail.com>"
+      back_color: 0x252a2e                      # 候选条背景色，24位色值，16进制，BGR顺序
+      border_color: 0x050505                    # 边框色
+      text_color: 0x424242                      # 拼音行文字颜色
+      hilited_back_color: 0xD75A00              # 第一候选项背景背景色
+      hilited_candidate_text_color: 0xFFFFFF    # 第一候选项文字颜色
+      hilited_candidate_label_color: 0xFFFFFF   # 第一候选项编号颜色
+      hilited_comment_text_color: 0x999999      # 注解文字高亮
+      hilited_text_color: 0x999999              # 高亮拼音 (需要开启内嵌编码)
+      candidate_text_color: 0xe9e9ea            # 预选项文字颜色
+      comment_text_color: 0x999999              # 拼音等提示文字颜色
+      horizontal: true                          # 水平排列
+      inline_preedit: true                      # 单行显示，false双行显示
+      label_color: 0x999999                     # 预选栏编号颜色
+      candidate_format: "%c\u2005%@"            # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间
+      font_face: "PingFangSC"                   # 候选词编号字体
+      font_point: 16              # 候选文字大小
+      label_font_point: 13        # 候选编号大小
+      corner_radius: 5            # 候选条圆角
+      hilited_corner_radius: 5    # 高亮圆角
+      border_height: 4            # 窗口上下高度
+      border_width: 4             # 窗口左右宽度
+      border_color_width: 0       # 输入条边框宽度
