--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -17,6 +17,8 @@ patch:
     Control_R: noop
     Caps_Lock: commit_code
     Eisu_toggle: clear
+  key_binder/select_first_character: 'bracketleft' # lua 选词快捷键，选第一个字
+  key_binder/select_last_character: 'bracketright' # lua 选词快捷键，选最后一个字
   key_binder/bindings: # 设置哪些键可以翻页，需要哪个取消注释即可
     - { accept: "Control+k", send: "Shift+Delete", when: composing }
     - { accept: Tab, send: Page_Down, when: composing } # Tab 向下翻页
@@ -26,11 +28,9 @@ patch:
     - { accept: equal, send: Page_Down, when: composing }
     - { accept: minus, send: Page_Up, when: composing }
 
-    # 失效设置，可通过关闭 lua 选词扩展恢复
+    # 失效设置，可通过关闭/更改 lua 选词快捷键恢复
     - { accept: bracketleft, send: Page_Up, when: composing } # 左括号向上翻页
     - { accept: bracketright, send: Page_Down, when: composing } # 右括号向下翻页
-    # 配置不支持
-    # - { accept: "Control+Shift+4", toggle: simplification, when: always } # Shift + Control + 4 切换简繁
 
     # 其它，有需要可自行开启
     # - { accept: "Control+Shift+1", select: .next, when: always}
