--- a/extended.dict.yaml
+++ b/extended.dict.yaml
@@ -6,9 +6,12 @@ name: extended
 version: "2020.12.30"
 sort: by_weight
 vocabulary: essay-zh-hans
-use_preset_vocabulary: false
+use_preset_vocabulary: true
 
 import_tables:
+  # 覆盖词频
+  - dicts/simp # 最小拼音词典
+
   - dicts/animal # 动物
   - dicts/caijing # 财经
   - dicts/food # 饮食
@@ -22,7 +25,4 @@ import_tables:
   - dicts/genshin # 原神
   - dicts/minecraft # Minecraft 词条
   - dicts/touhou # 东方 Project
-
-  # 覆盖词频
-  - dicts/simp # 最小拼音词典
 ...
