chore: fix typo

--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -12,9 +12,9 @@ patch:
   ascii_composer/good_old_caps_lock: false
   ascii_composer/switch_key:
     Shift_L: noop
-    Shift_R: commit_code # macOS 上此项无效，Windows 可用有 Shift 切换中英输入
+    Shift_R: commit_code # macOS 上此项无效，Windows 可用右 Shift 切换中英输入
     Control_L: noop
-    Control_R: noop
+    Control_R: noop # macOS 上此项无效，Windows 上可自行定义
     Caps_Lock: commit_code
     Eisu_toggle: clear
   key_binder/select_first_character: 'bracketleft' # lua 选词快捷键，选第一个字
