chore: default use LXGWWenKai
(and add PingFangSC fallback

--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -16,9 +16,9 @@ patch:
       corner_radius: 5 # 候选条圆角
       border_height: 0
       border_width: 0
-      font_face: "PingFangSC" # 候选词字体
-      font_point: 16 # 候选字词大小
-      label_font_face: "PingFangSC" # 候选词编号字体
+      font_face: "LXGWWenKai-Regular,PingFangSC" # 候选词字体
+      font_point: 16.5 # 候选字词大小
+      label_font_face: "LXGWWenKai-Regular,PingFangSC" # 候选词编号字体
       label_font_point: 12 # 候选编号大小
 
       # 颜色
