--- a/dicts/minecraft.dict.yaml
+++ b/dicts/minecraft.dict.yaml
@@ -3,7 +3,7 @@
 # source: https://pinyin.sogou.com/dict/detail/index/124017
 
 ---
-name: pinyin_minecraft
+name: minecraft
 version: "2021-11-04"
 sort: by_weight
 ...
