--- a/dicts/caijing.dict.yaml
+++ b/dicts/caijing.dict.yaml
@@ -7,7 +7,7 @@
 #     https://github.com/mozillazg/python-pinyin
 
 ---
-name: pinyin_caijing
+name: caijing
 version: "2016-12-24"
 sort: by_weight
 ...
