--- a/dicts/idiom.dict.yaml
+++ b/dicts/idiom.dict.yaml
@@ -9,7 +9,7 @@
 #     https://github.com/mozillazg/python-pinyin
 
 ---
-name: pinyin_idiom
+name: idiom
 version: "2021-04-18"
 sort: by_weight
 ...
