--- a/dicts/medical.dict.yaml
+++ b/dicts/medical.dict.yaml
@@ -7,7 +7,7 @@
 #     https://github.com/mozillazg/python-pinyin
 
 ---
-name: pinyin_medical
+name: medical
 version: "2017-01-20"
 sort: by_weight
 ...
